Added survey stuff and reworked parts of the explanation

--- a/bertrand/templates/bertrand/EndRound.html
+++ b/bertrand/templates/bertrand/EndRound.html
@@ -16,11 +16,11 @@
         {% if super_game_count == 2 %}
             Dies wird der letzte Durchgang sein.
         {% endif %}
-        <b>WICHTIG: Beachten Sie, dass sich dabei mit  neuen Mitspielern in einer
+        <b>WICHTIG: Beachten Sie, dass sich dabei mit neuen Mitspielern in einer
         Gruppe sein werden. </b>
         
     {% else %}
-    Dies war das letzte Spiel. Bitte klicken Sie auf "Weiter", um noch einige abschließenden Fragen zu beantworten.
+    Dies war das letzte Spiel. Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
 
     {% endif %}
 <br><br>    
