--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -6,9 +6,9 @@
 {% block content %}
 
     <center>
-    <b>Klicken Sie auf "Weiter" um mit dem Experiment zu beginnen.
+    <b>Klicken Sie auf "Weiter" um mit dem {{super_game_count}}. von drei Spielen zu beginnen.
     <br><br>    
-    Sie sind der Spieler {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Personen.
+    Sie sind Firma {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Firmen. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
     
     {% if  super_game_count != 1 %}
     <br><br>
