--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -15,8 +15,8 @@ Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie eine <b>Preisempfehlu
 <b>Wichtig:</b> Bei der Preisempfehlung handelt es sich lediglich um einen <b>Vorschlag</b>. Es steht Ihnen frei, einen anderen Preis als den empfohlenen zu setzen. Dies kann allerdings Auswirkungen auf die Empfehlungen an Sie und Ihre Wettbewerber in der Zukunft haben.
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlungen ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
-  Der Algorithmus empfiehlt somit nicht einen Preis der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt.
-  <b> Es werden Preise empfohlen die insgesamt über das gesamte Experiment einen hohen Gewinn erreichen.</b>
+  Der Algorithmus empfiehlt somit <b>nicht/<b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. <br>
+  <b> Es werden Preise empfohlen die insgesamt über das gesamte Experiment einen hohen Gewinn erreichen.</b><br>
 Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Informationsquelle für alle Teilnehmer.</b>
 
 
