--- a/survey/templates/survey/SurveyQuestionsFalk.html
+++ b/survey/templates/survey/SurveyQuestionsFalk.html
@@ -1,10 +1,13 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}{% endblock %}
+{% block title %}Bitte beantworten Sie die folgenden Fragen{% endblock %}
 
 {% block content %}
 
-falk lala
+{% formfields %}
+
+<br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
+
 {% next_button %}
 {% endblock %}
