fixed small things in htmls

--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-    Wählen Sie Ihren Preis (Runde {{player.round_number}})
+    Wählen Sie Ihren Preis (Runde {{player.round_number}} in Spiel {{super_game_count}})
 {% endblock %}
 
 {% block content %}
