--- a/bertrand/templates/bertrand/HistoryResults.html
+++ b/bertrand/templates/bertrand/HistoryResults.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<br><b>Zur Erinnerung: Sie sind Firma {{player.id_in_group}}</b></br>
+<br><b>Zur Erinnerung: Sie sind in diesem Spiel Firma {{player.id_in_group}}</b></br>
 <br>
 <br><b>Fahren Sie mit der Maus über den Graphen, um die Preise in der jeweiligen Period zu sehen.</b></br>
 <br>
