--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -8,7 +8,7 @@
     <center>
     <b>Klicken Sie auf "Weiter" um mit dem {{super_game_count}}. von drei Spielen zu beginnen.
     <br><br>    
-    Sie sind Firma {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Firmen. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
+    Sie sind in diesem Spiel Firma {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Firmen. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
     
     {% if  super_game_count != 1 %}
     <br><br>
