--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -6,21 +6,23 @@ Viele Dank für Ihre Teilnahme
 {% endblock %}
 
 {% block content %}
-Das Experiment endet jetzt. Ihre Auszahlung ist wie folgt:
+Das Experiment endet jetzt.<br><br> 
+
 
     <table class="table">
+
 <tr> <th> Gewinn im ersten Spiel </th> <td> {{payoff_sg_1}} Taler </td> </tr>
 <tr> <th> Gewinn im zweiten Spiel </th> <td>  {{payoff_sg_2}} Taler </td> </tr>
 <tr> <th> Gewinn im dritten Spiel </th> <td>  {{payoff_sg_3}} Taler </td> </tr>
 </table>
-<br><br>
+<br>
 Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt wird.
 <br><br>
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}.  
   
    <br><br>
- <b> Ihre gesamte Auszahlung ist also {{final_payoff_euro}} €. Bitte warte bis wir Sie aufrufen. </b>
+ <b> Ihre gesamte Auszahlung ist also {{final_payoff_euro}} €.</b>
    <br><br>
 
     
