--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -31,7 +31,7 @@ Sie konkurrieren mit den anderen beiden Firmen im Markt.
 
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma 1 setzt einen Preis von 1, Firma B setzt einen Preis von 1, Firma C setzt einen Preis von 5. Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt. Bei einem Preis von einem Taler ist der Gesamtgewinn 30 Taler, da es 30 Kunden gibt. Firma A und B verkaufen beide die gleiche Anzahl an Produkten und bekommen damit den gleichen Gewinn von 15 Talern ausgezahlt. Firma C verkauft nichts und hat einen Gewinn von 0. 
+Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 1, Firma C setzt einen Preis von 5. Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt. Bei einem Preis von einem Taler ist der Gesamtgewinn 30 Taler, da es 30 Kunden gibt. Firma A und B verkaufen beide die gleiche Anzahl an Produkten und bekommen damit den gleichen Gewinn von 15 Talern ausgezahlt. Firma C verkauft nichts und hat einen Gewinn von 0. 
 <br><br>
 <b>Beispiel 2:</b>
 Firma A setzt einen Preis von 10, Firma B setzt einen Preis von 10, Firma C setzt einen Preis von 10. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 100 Talern ausgezahlt. 
