--- a/survey/templates/survey/SurveyQuestionsAlg.html
+++ b/survey/templates/survey/SurveyQuestionsAlg.html
@@ -5,8 +5,401 @@
 
 {% block content %}
 
-{% formfields %}
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_alg_helpful_0">Wie hilfreich fanden Sie die Empfehlungen des Algorithmus?</label>
+            <div class="controls  field-q_alg_helpful">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_alg_helpful_0" class="form-check-label">gar nicht hilfreich &nbsp;</label>
 
+                <input type="radio" name="q_alg_helpful" value="0" required="" id="id_q_alg_helpful_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="1" required="" id="id_q_alg_helpful_1" class="form-check-input">
+
+                <label for="id_q_alg_helpful_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="2" required="" id="id_q_alg_helpful_2" class="form-check-input">
+
+                <label for="id_q_alg_helpful_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="3" required="" id="id_q_alg_helpful_3" class="form-check-input">
+
+                <label for="id_q_alg_helpful_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="4" required="" id="id_q_alg_helpful_4" class="form-check-input">
+
+                <label for="id_q_alg_helpful_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="5" required="" id="id_q_alg_helpful_5" class="form-check-input">
+
+                <label for="id_q_alg_helpful_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="6" required="" id="id_q_alg_helpful_6" class="form-check-input">
+
+                <label for="id_q_alg_helpful_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="7" required="" id="id_q_alg_helpful_7" class="form-check-input">
+
+                <label for="id_q_alg_helpful_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="8" required="" id="id_q_alg_helpful_8" class="form-check-input">
+
+                <label for="id_q_alg_helpful_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="9" required="" id="id_q_alg_helpful_9" class="form-check-input">
+
+                <label for="id_q_alg_helpful_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_helpful" value="10" required="" id="id_q_alg_helpful_10" class="form-check-input">
+
+                <label for="id_q_alg_helpful_10" class="form-check-label">sehr hilfreich</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_alg_how_sure_0">Wie sicher waren Sie sich, dass Ihre Mitspieler der Empfehlung des Algorithmus folge leisten würden?</label>
+            <div class="controls  field-q_alg_how_sure">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_alg_how_sure_0" class="form-check-label">gar nicht sicher &nbsp;</label>
+
+                <input type="radio" name="q_alg_how_sure" value="0" required="" id="id_q_alg_how_sure_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="1" required="" id="id_q_alg_how_sure_1" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="2" required="" id="id_q_alg_how_sure_2" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="3" required="" id="id_q_alg_how_sure_3" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="4" required="" id="id_q_alg_how_sure_4" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="5" required="" id="id_q_alg_how_sure_5" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="6" required="" id="id_q_alg_how_sure_6" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="7" required="" id="id_q_alg_how_sure_7" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="8" required="" id="id_q_alg_how_sure_8" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="9" required="" id="id_q_alg_how_sure_9" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_how_sure" value="10" required="" id="id_q_alg_how_sure_10" class="form-check-input">
+
+                <label for="id_q_alg_how_sure_10" class="form-check-label">sehr sicher</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_alg_no_recommendation_0">Nehmen Sie an, dass Sie keine Empfehlung bekommen hätten. Denken Sie, dass Ihr Gesamtgewinn höher oder niedriger gewesen wäre?</label>
+            <div class="controls  field-q_alg_no_recommendation">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_alg_no_recommendation_0" class="form-check-label">deutlich niedriger &nbsp;</label>
+
+                <input type="radio" name="q_alg_no_recommendation" value="0" required="" id="id_q_alg_no_recommendation_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="1" required="" id="id_q_alg_no_recommendation_1" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="2" required="" id="id_q_alg_no_recommendation_2" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="3" required="" id="id_q_alg_no_recommendation_3" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="4" required="" id="id_q_alg_no_recommendation_4" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="5" required="" id="id_q_alg_no_recommendation_5" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="6" required="" id="id_q_alg_no_recommendation_6" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="7" required="" id="id_q_alg_no_recommendation_7" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="8" required="" id="id_q_alg_no_recommendation_8" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="9" required="" id="id_q_alg_no_recommendation_9" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_no_recommendation" value="10" required="" id="id_q_alg_no_recommendation_10" class="form-check-input">
+
+                <label for="id_q_alg_no_recommendation_10" class="form-check-label">deutlich höher</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_alg_relevant_other_player_0">Was denken Sie, wie relevant war die Empfehlung des Algorithmus für Ihre Mitspieler?</label>
+            <div class="controls  field-q_alg_relevant_other_player">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_alg_relevant_other_player_0" class="form-check-label">gar nicht hilfreich &nbsp;</label>
+
+                <input type="radio" name="q_alg_relevant_other_player" value="0" required="" id="id_q_alg_relevant_other_player_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="1" required="" id="id_q_alg_relevant_other_player_1" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="2" required="" id="id_q_alg_relevant_other_player_2" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="3" required="" id="id_q_alg_relevant_other_player_3" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="4" required="" id="id_q_alg_relevant_other_player_4" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="5" required="" id="id_q_alg_relevant_other_player_5" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="6" required="" id="id_q_alg_relevant_other_player_6" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="7" required="" id="id_q_alg_relevant_other_player_7" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="8" required="" id="id_q_alg_relevant_other_player_8" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="9" required="" id="id_q_alg_relevant_other_player_9" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_alg_relevant_other_player" value="10" required="" id="id_q_alg_relevant_other_player_10" class="form-check-input">
+
+                <label for="id_q_alg_relevant_other_player_10" class="form-check-label">sehr hilfreich</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
 {% next_button %}
