--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -22,7 +22,7 @@ Ein Euro entsprechen dabei {{exchange_rate|c}}.
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}.  
   
    <br><br>
- <b> Ihre gesamte Auszahlung ist also {{final_payoff_euro}} €.</b>
+ <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up}} + {{show_up}} = {{final_money_with_show_up}} €.</b>
    <br><br>
 
     
