added more tests, app passes them all, also fixed some minor things that mara noticed

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -14,7 +14,7 @@
     {% if super_game_count != 3 %}
     <b>
     
-        Sie spielen jetzt das gleiche Spiel im Folgenden erneut. Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
+        Sie spielen jetzt das gleiche Spiel erneut. Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
         <br><br>
 
         WICHTIG: Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einer
@@ -26,7 +26,7 @@
         </b>
         
     {% else %}
-    Dies war das letzte Spiel. Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
+    Dies war das letzte Spiel. Das Experiment endet jetzt. Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
 
     {% endif %}
 <br><br>    
