--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <center>
-    <b>Klicken Sie auf "Weiter" um mit dem {{super_game_count}}. von drei Spielen zu beginnen.
+    <b>Klicken Sie auf "Weiter" um mit dem {{super_game_count}}. von 3 Spielen zu beginnen.
     <br><br>    
     Sie sind in diesem Spiel Firma {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Firmen. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
     
