--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -19,7 +19,7 @@ Das Experiment endet jetzt.<br><br>
 Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt wird.
 <br><br>
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
-Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}.  
+Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up}}.  
   
    <br><br>
  <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up}} + {{show_up}} = {{final_money_with_show_up}} €.</b>
@@ -28,6 +28,6 @@ Außerdem erhalten Sie zusätzlich für Ihr Erscheinen im Experiment {{show_up}}
     
 
 
-Die Teilnehmer werden nun nacheinander nach vorne gebeten, um Ihnen den Gewinn auszuzahlen. Warten Sie bitte an Ihrem Platz bis Sie an der Reihe sind. 
+Die Teilnehmer werden nun nacheinander nach vorne gebeten, um Ihnen den Gewinn auszuzahlen. Warten Sie bitte an Ihrem Platz, bis Sie an der Reihe sind. 
 {% endblock %}
 
