--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -31,13 +31,13 @@ Sie konkurrieren mit den anderen beiden Firmen im Markt.
 
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 1, Firma C setzt einen Preis von 5. Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt. Bei einem Preis von einem Taler ist der Gesamtgewinn 30 Taler, da es 30 Kunden gibt. Firma A und B verkaufen beide die gleiche Anzahl an Produkten und bekommen damit den gleichen Gewinn von 15 Talern ausgezahlt. Firma C verkauft nichts und hat einen Gewinn von 0. 
+Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 1, Firma 3 setzt einen Preis von 5. Somit haben Firma 1 und 2 gemeinsam den niedrigsten Preis gesetzt. Bei einem Preis von einem Taler ist der Gesamtgewinn 30 Taler, da es 30 Kunden gibt. Firma 1 und 2 verkaufen beide die gleiche Anzahl an Produkten und bekommen damit den gleichen Gewinn von 15 Talern ausgezahlt. Firma 3 verkauft nichts und hat einen Gewinn von 0. 
 <br><br>
 <b>Beispiel 2:</b>
-Firma A setzt einen Preis von 10, Firma B setzt einen Preis von 10, Firma C setzt einen Preis von 10. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 100 Talern ausgezahlt. 
+Firma 1 setzt einen Preis von 10, Firma 2 setzt einen Preis von 10, Firma 3 setzt einen Preis von 10. Somit haben Firma 1, 2 und 3 gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 100 Talern ausgezahlt. 
 <br><br>
 <b>Beispiel 3:</b>
-Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 4, Firma C setzt einen Preis von 8. Somit hat Firma A den niedrigsten Preis gesetzt. Firma A verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern ausgezahlt. Firma B und C verkaufen beide nichts und haben einen Gewinn von 0. 
+Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 4, Firma 3 setzt einen Preis von 8. Somit hat Firma 1 den niedrigsten Preis gesetzt. Firma 1 verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern ausgezahlt. Firma 2 und 3 verkaufen beide nichts und haben einen Gewinn von 0. 
 <br><br>
 {% next_button %}
 {% endblock %}
