Small adjustments in the html and PROD Values for the roudn numbers as generated by the random numbetr script

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -7,7 +7,7 @@
 
 
     Der Zufallsmechanismus hat entschieden, dass dies die letzte Runde des {{super_game_count}}. Spiels war. 
-    Sie haben in diesem Spiel insgesamt <b>{{accumulated_profit}} Taler </b> verdient. <br>
+    Sie haben im {{super_game_count}}. Siel insgesamt <b>{{accumulated_profit}} Taler </b> verdient. <br>
     <br><br>
     <br><br>
 
