--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -57,7 +57,7 @@
      Sie haben daher ihr Produkt nicht verkauft und erhalten einen Gewinn von {{player.profit}} Taler.
      {% endif %}
 
-    <br><br>Insgesamt haben Sie {{ player.accumulated_profit }} Taler in allen Runden in diesem Spiel erwirtschaftet.
+    <br><br>Insgesamt haben Sie bisher {{ player.accumulated_profit }} Taler in allen Runden im {{super_game_count}}. Spiel erwirtschaftet.
     <br><br>
 
     {% next_button %}
